<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reactive</name>
  <version>0.0.1</version>
  <description>Package description</description>
  <maintainer email="e12347325@student.tuwien.ac.at">ridan</maintainer>
  <license>License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
