<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_follow</name>
  <version>0.0.0</version>
  <description>Wall following mechanism</description>
  <maintainer email="T4@T4.com">Team 4</maintainer>
  <license>no licence</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>diagnostics_aggregator</depend>
  <depend>rqt_robot_monitor</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
